traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:34: error: type mismatch;
 found   : Unit
 required: Boolean
      if(s=0){
          ^